# reasdio

./: .gitignore  README.md  main.py  pyproject.toml
configs/: htsat.yaml  mimi_full.yaml  mimi_semantic.yaml
scripts/: benchmark.py  check_data.py  download_audio.py  eval.py  quick_train.py  train.py
src/: data.py  encoders.py  model.py
tests/: test_data.py  test_encoders.py  test_model.py
